# Windie-Sandbox

./: .gitignore  AGENTS.md  Backend.md  Cargo.toml  Clipboard2.md  Frontend.md  LICENSE  Manual-Notes.md  README.md  commands.md  install.sh
.github/workflows/: check.yml  release.yml
benches/: 100-messages-baseline.json  100-messages-stress-baseline.json  README.md  create_fixture.sh
dev/: README.md
dev/windie-inspector/: README.md  craco.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dev/windie-ui/: api.js  app.js  format.js  index.html  stream.js
docs/: development.md  local-installation.md  memory-core-prd.md  provider-configuration.md  provider-onboarding.md
docs/architecture/: apis.md  cli.md  conversation.md  execution.md  (+2 more)
scripts/: bench.sh  check-public-bifrost.sh  check.sh  commit-with-bench.sh  create_benchmark_fixture.sh  dev-api.sh  dev-ui.sh  dev.sh  install-git-hooks.sh  install-local.sh  install.sh  package-release.sh  promote-bench-baseline.sh  push-with-bench.sh  recreate_windie_database.sh  setup.sh
src/: api.rs  api_tests.rs  cli.rs  cli_tests.rs  context.rs  conversation.rs  doctor.rs  error.rs  gateway.rs  image_input.rs  input.rs  inspector.rs  llm.rs  llm_tests.rs  main.rs  mcp.rs  operation.rs  operation_tests.rs  output.rs  output_tests.rs  paths.rs  perf.rs  policy.rs  policy_tests.rs  provider_env.rs  run.rs  runtime.rs  runtime_tests.rs  session.rs  setup.rs  shell.rs  shell_tests.rs  store.rs  store_tests.rs  tool.rs  tool_catalog.rs  tool_provider.rs  tool_provider_tests.rs  wakeup.rs
(+183 files in other folders)
